# OgrePosteffects

./: CMakeLists.txt  ClassDiagram.graphml  LICENSE  README.md
data/: plugins.cfg  plugins_d.cfg  resources.cfg
data/media/materials/textures/: drop.tga
src/: Main.cpp  MinimalOgre.cpp  MinimalOgre.h  PostEffect.cpp  PostEffect.h  PostEffectFactory.cpp  PostEffectFactory.h  PostEffectFading.cpp  PostEffectManager.cpp  PostEffectManager.h  PostEffectNull.cpp  Shaders.h
src/effect/: PostEffect.cpp  PostEffect.h  PostEffectBlackWhite.cpp  PostEffectBloom.cpp  PostEffectBlur.cpp  PostEffectComplex.cpp  PostEffectComplex.h  PostEffectComplexTest.cpp  PostEffectDownsampleTest.cpp  PostEffectFactory.cpp  PostEffectFactory.h  PostEffectFading.cpp  PostEffectGodRays.cpp  PostEffectManager.cpp  PostEffectManager.h  PostEffectNull.cpp  PostEffectRain.cpp
